--- a/www/public/cpu.html
+++ b/www/public/cpu.html
@@ -10,20 +10,55 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./css/css_cards.css" media="screen"/>
   </head>
   <body>
     <main>
-      <div >
-        <h5>PORCENTAJE DE UTILIZACION: 
-          <span id="cpu_used">
-            
-          </span>
-        </h5>
+      <div class="container-fluid">
+        <div class="row">
+        <div class="col-md-6 col-sm-4">
+        <div class="wrimagecard wrimagecard-topimage">
+                <a href="#">
+                <div class="wrimagecard-topimage_header" style="background-color: rgba(22, 160, 133, 0.1) ">
+                  <center><i class="fa fa-microchip" style="color:#16A085"></i></center>
+                </div>
+                <div class="wrimagecard-topimage_title">
+                  <h4>PORCENTAJE CPU
+                  <div class="pull-right badge" ><h4 id = "cpu_used"></h4></div></h4>
+                </div>
+              </a>
+            </div>
+            </div>
+          <div class="col-md-6 col-sm-4">
+            <div class="wrimagecard wrimagecard-topimage">
+                <a href="#">
+                <div class="wrimagecard-topimage_header" style="background-color: rgba(22, 160, 133, 0.1)">
+                  <center><i class = "fa fa-clock-o" style="color:#16A085"></i></center>
+                </div>
+                <div class="wrimagecard-topimage_title">
+                  <h4>Tiempo
+                  <div class="pull-right badge" id="WrControls">
+                    <h4 id = "segundos"></h4>
+                  </div></h4>
+                </div>
+              </a>
+            </div>
       </div>
-      <div id="graph"></div>
-      <div id="xasis">
-        <h5> TIEMPO EN SEGUNDOS</h5>
       </div>
+        <div class="row">
+          <div class="col-md-12 col-sm-4">
+            <div class="wrimagecard wrimagecard-topimage" id="graph">
+              
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     </main>
   </body>
   <!-- PLOTLY -->
