--- a/www/public/index.html
+++ b/www/public/index.html
@@ -10,8 +10,97 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./css/css_cards.css" media="screen"/>
+    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
   </head>
-  <body></body>
+  <body>
+    <div class="container-fluid">
+      <div class="row">
+      <div class="col-md-12 col-sm-4">
+      <div class="wrimagecard wrimagecard-topimage">
+              <a href="#">
+              <div class="wrimagecard-topimage_header" style="background-color: rgba(22, 160, 133, 0.1) ">
+                <center>
+                  <table class="table table-sm table-dark">
+                    <thead>
+                      <tr>
+                        <th scope="col">Nombre</th>
+                        <th scope="col">Carnet</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>Jefferson Linares</td>
+                        <td>201504448</td>
+                      </tr>
+                      <tr>
+                        <td>Ronald Berdúo</td>
+                        <td>201504420</td>
+                      </tr>
+                      
+                    </tbody>
+                  </table>
+                  <!--i class="fa fa-microchip" style="color:#16A085"></i-->
+                </center>
+              </div>
+              <div class="wrimagecard-topimage_title">
+                <h4>Sistemas Operativos 1</h4>
+              </div>
+            </a>
+          </div>
+          </div>
+       
+    </div>
+    <div class="row">
+      <div class="col-md-4 col-sm-4">
+        <div class="wrimagecard wrimagecard-topimage">
+          <a href="http://localhost:3000/procesos.html">
+            <div class="wrimagecard-topimage_header" style="background-color: rgba(22, 160, 133, 0.1)">
+              <center><i class = "fa fa-cogs" style="color:#16A085"></i></center>
+            </div>
+            <div class="wrimagecard-topimage_title">
+              <h4>PROCESOS
+              </h4>
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-4">
+        <div class="wrimagecard wrimagecard-topimage">
+            <a href="http://localhost:3000/cpu.html">
+            <div class="wrimagecard-topimage_header" style="background-color: rgba(22, 160, 133, 0.1)">
+              <center><i class = "fa fa-microchip" style="color:#16A085"></i></center>
+            </div>
+            <div class="wrimagecard-topimage_title">
+              <h4>CPU
+              </h4>
+            </div>
+          </a>
+        </div>
+      </div>
+       <div class="col-md-4 col-sm-4">
+        <div class="wrimagecard wrimagecard-topimage">
+          <a href="http://localhost:3000/ram.html">
+            <div class="wrimagecard-topimage_header" style="background-color: rgba(22, 160, 133, 0.1)">
+              <center><i class = "fas fa-memory" style="color:#16A085;font-size:68px"></i></center>
+            </div>
+            <div class="wrimagecard-topimage_title">
+              <h4>RAM
+              </h4>
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+    </div>
+  </div>
+
+  </body>
   <script
     src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -27,4 +116,5 @@
     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
     crossorigin="anonymous"
   ></script>
+
 </html>
