--- a/www/public/procesos.html
+++ b/www/public/procesos.html
@@ -62,7 +62,8 @@
         </div>
         <div class="d-sm-flex align-items-center justify-content-between mb-4">
             <h1 class="h3 mb-0 text-gray-800">Monitor de PROCESOS</h1>
-          </div>
+        </div>
+        
         
     </main>
   </body>
@@ -71,5 +72,5 @@
   <!-- SOCKET.IO -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
   <!-- Mis scripts -->
-  <script src="js/cpu.js"></script>
+  <script src="js/procesos.js"></script>
 </html>
