Falta enviar el Json de procesos

--- a/www/public/procesos.html
+++ b/www/public/procesos.html
@@ -72,5 +72,5 @@
   <!-- SOCKET.IO -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
   <!-- Mis scripts -->
-  <script src="js/procesos.js"></script>
+  <script src="js/process.js"></script>
 </html>
