Correción del navbar en pagina de procesos

--- a/www/public/procesos.html
+++ b/www/public/procesos.html
@@ -92,62 +92,35 @@
             <div class="row">
               <!-- Nav tabs -->
               <ul class="nav nav-tabs" id="navbar" role="tab">
+                
                 <li class="nav-item">
-                  <a
-                    class="nav-link"
-                    id="cuadruplos-tab"
-                    data-toggle="tab"
-                    href=".index.html"
-                    role="tab"
-                    aria-controls="cuadruplos"
-                    aria-selected="false"
-                    >INICIO
+                  <button onclick="location.href='index.html';" value="HOME" class= "nav-link" data-toggle="tab" aria-selected="false" />
+                      INICIO
                     <i class="fa fa-home" style="color: #16a085;"></i>
-                  </a>
+                  </button>
                 </li>
 
 
                 <li class="nav-item">
-                  <a
-                    class="nav-link active"
-                    id="errores-tab"
-                    data-toggle="tab"
-                    href=".procesos.html"
-                    role="tab"
-                    aria-controls="errores"
-                    aria-selected="true"
-                    >PROCESOS
+                  <button  onclick="location.href='procesos.html';"  value="PROCESOS" class= "nav-link" data-toggle="tab" aria-selected="true"/>
+                      PROCESOS
                     <i class="fa fa-cogs" style="color: #16a085;"></i>
-                  </a>
+                  </button>
                 </li>
 
                 <li class="nav-item">
-                  <a
-                    class="nav-link"
-                    id="compiEditor-tab"
-                    data-toggle="tab"
-                    href=".cpu.html"
-                    role="tab"
-                    aria-controls="compiEditor"
-                    aria-selected="true"
-                    >CPU
+                  <button  onclick="location.href='cpu.html';" value="CPÚ" class= "nav-link" data-toggle="tab" aria-selected="false"/>
+                    CPU
                     <i class="fa fa-microchip" style="color: #16a085;"></i>
-                  </a>
+                  </button>
                 </li>
 
 
                 <li class="nav-item">
-                  <a
-                    class="nav-link"
-                    id="reporteSimbolos-tab"
-                    data-toggle="tab"
-                    href=".ram.html"
-                    role="tab"
-                    aria-controls="reporteSimbolos"
-                    aria-selected="true"
-                    >RAM
+                  <button  onclick="location.href='ram.html';" value="RAM" class= "nav-link" data-toggle="tab" aria-selected="false">
+                    RAM
                     <i class="fa fa-memory" style="color: #16a085;"></i>
-                  </a>
+                  </button>
                 </li>
               </ul>
             </div>
@@ -185,11 +158,14 @@
                         </tr>
                       </tbody>
                     </table>
-                    <!--i class="fa fa-microchip" style="color:#16A085"></i-->
+                    
                   </center>
                 </div>
                 <div class="wrimagecard-topimage_title">
-                  <h4>Info Procesos</h4>
+                  <h4>
+                    Info Procesos
+                    <i class="fa fa-cogsstyle="color:#16A085"></i>
+                  </h4>
                 </div>
               </a>
             </div>
