Formato de ram.html

--- a/www/public/procesos.html
+++ b/www/public/procesos.html
@@ -12,12 +12,12 @@
     />
 
     <link
-      href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css"
       rel="stylesheet"
       id="bootstrap-css"
     />
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css"
@@ -26,22 +26,13 @@
       href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="./css/css_cards.css"
-      media="screen"
-    />
+    <link rel="stylesheet" href="css/css_cards.css" />
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://code.jquery.com/jquery-1.9.1.js"></script>
     <script
       src="https://rawgit.com/jonmiles/bootstrap-treeview/master/public/js/bootstrap-treeview.js"
       type="text/javascript"
     ></script>
-    <link
-      rel="stylesheet"
-      href="https://rawgit.com/jonmiles/bootstrap-treeview/master/public/css/bootstrap-treeview.css"
-    />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
@@ -72,7 +63,7 @@
       href="https://netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
     />
 
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <!-- custom JS -->
 
     <style>
@@ -97,7 +88,7 @@
                     class="nav-link"
                     id="cuadruplos-tab"
                     data-toggle="tab"
-                    href=".index.html"
+                    href="index.html"
                     role="tab"
                     aria-controls="cuadruplos"
                     aria-selected="false"
@@ -106,13 +97,12 @@
                   </a>
                 </li>
 
-
                 <li class="nav-item">
                   <a
                     class="nav-link active"
                     id="errores-tab"
                     data-toggle="tab"
-                    href=".procesos.html"
+                    href="procesos.html"
                     role="tab"
                     aria-controls="errores"
                     aria-selected="true"
@@ -126,7 +116,7 @@
                     class="nav-link"
                     id="compiEditor-tab"
                     data-toggle="tab"
-                    href=".cpu.html"
+                    href="cpu.html"
                     role="tab"
                     aria-controls="compiEditor"
                     aria-selected="true"
@@ -135,13 +125,12 @@
                   </a>
                 </li>
 
-
                 <li class="nav-item">
                   <a
                     class="nav-link"
                     id="reporteSimbolos-tab"
                     data-toggle="tab"
-                    href=".ram.html"
+                    href="ram.html"
                     role="tab"
                     aria-controls="reporteSimbolos"
                     aria-selected="true"
@@ -152,7 +141,6 @@
               </ul>
             </div>
           </nav>
-
         </div>
       </div>
       <div class="d-sm-flex align-items-center justify-content-between mb-4">
@@ -161,49 +149,48 @@
 
       <div class="row">
         <div class="col-md-12 col-sm-4">
-        <div class="wrimagecard wrimagecard-topimage">
-                <a href="#">
-                <div class="wrimagecard-topimage_header" style="background-color: rgba(22, 160, 133, 0.1) ">
-                  <center>
-                    <table class="table table-sm table-dark">
-                      <thead>
-                        <tr>
-                          <th scope="col">Procesos En Ejecucion</th>
-                          <th scope="col">Procesos Suspendidos</th>
-                          <th scope="col">Procesos Detenidos</th>
-                          <th scope="col">Procesos Zombie</th>
-                          <th scope="col">Total Procesos</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <td id="td_1"></td>
-                          <td id="td_2"></td>
-                          <td id="td_3"></td>                          
-                          <td id="td_4"></td>
-                          <td id="td_5"></td>
-                        </tr>
-                      </tbody>
-                    </table>
-                    <!--i class="fa fa-microchip" style="color:#16A085"></i-->
-                  </center>
-                </div>
-                <div class="wrimagecard-topimage_title">
-                  <h4>Info Procesos</h4>
-                </div>
-              </a>
-            </div>
-            </div>
-         
+          <div class="wrimagecard wrimagecard-topimage">
+            <a href="#">
+              <div
+                class="wrimagecard-topimage_header"
+                style="background-color: rgba(22, 160, 133, 0.1);"
+              >
+                <center>
+                  <table class="table table-sm table-dark">
+                    <thead>
+                      <tr>
+                        <th scope="col">Procesos En Ejecucion</th>
+                        <th scope="col">Procesos Suspendidos</th>
+                        <th scope="col">Procesos Detenidos</th>
+                        <th scope="col">Procesos Zombie</th>
+                        <th scope="col">Total Procesos</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td id="td_1"></td>
+                        <td id="td_2"></td>
+                        <td id="td_3"></td>
+                        <td id="td_4"></td>
+                        <td id="td_5"></td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <!--i class="fa fa-microchip" style="color:#16A085"></i-->
+                </center>
+              </div>
+              <div class="wrimagecard-topimage_title">
+                <h4>Info Procesos</h4>
+              </div>
+            </a>
+          </div>
+        </div>
       </div>
 
       <div class="table-responsive" id="tablaProcesos"></div>
-
-    
     </main>
-
   </body>
-  
+
   <!-- SOCKET.IO -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
   <!-- Mis scripts -->
