--- a/www/public/index.html
+++ b/www/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Proyecto 1 - Sistemas Operativos 1</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
@@ -36,7 +36,7 @@
 
   <body>
     <div class="container-fluid">
-      <div class="row">
+      <div class="row py-5">
         <div class="col-md-12 col-sm-4">
           <div class="wrimagecard wrimagecard-topimage">
             <a href="#">
