--- a/www/public/index.html
+++ b/www/public/index.html
@@ -76,7 +76,7 @@
       <div class="row">
         <div class="col-md-4 col-sm-4">
           <div class="wrimagecard wrimagecard-topimage">
-            <a href="http://localhost:3000/procesos.html">
+            <a href="procesos.html">
               <div
                 class="wrimagecard-topimage_header"
                 style="background-color: rgba(22, 160, 133, 0.1);"
@@ -93,7 +93,7 @@
         </div>
         <div class="col-md-4 col-sm-4">
           <div class="wrimagecard wrimagecard-topimage">
-            <a href="http://localhost:3000/cpu.html">
+            <a href="cpu.html">
               <div
                 class="wrimagecard-topimage_header"
                 style="background-color: rgba(22, 160, 133, 0.1);"
@@ -110,7 +110,7 @@
         </div>
         <div class="col-md-4 col-sm-4">
           <div class="wrimagecard wrimagecard-topimage">
-            <a href="http://localhost:3000/ram.html">
+            <a href="ram.html">
               <div
                 class="wrimagecard-topimage_header"
                 style="background-color: rgba(22, 160, 133, 0.1);"
