--- a/www/public/ram.html
+++ b/www/public/ram.html
@@ -118,7 +118,7 @@
               style="background-color: rgba(22, 160, 133, 0.1);"
             >
               <div class="d-flex justify-content-center">
-                <i class="fa fa-memory" style="color: #16a085;"></i>
+                <i class="fa fa-line-chart" style="color: #16a085;"></i>
               </div>
             </div>
             <div class="wrimagecard-topimage_title">
@@ -140,7 +140,7 @@
               style="background-color: rgba(22, 160, 133, 0.1);"
             >
               <div class="d-flex justify-content-center">
-                <i class="fa fa-memory" style="color: #16a085;"></i>
+                <i class="fa fa-percent" style="color: #16a085;"></i>
               </div>
             </div>
             <div class="wrimagecard-topimage_title">
